--- a/lab2/post-service/package.json
+++ b/lab2/post-service/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.16.1",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "axios": "^0.23.0"
   }
 }
